--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,13 @@ variables:
   DOCKER_IMAGE_NAME: "api_gateway_ms"
   CONTAINER_PORT: "5014"
 
+
+workflow:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "push"'
+      when: never  # Prevent pipeline run for push event
+    - when: always # Run pipeline for all other cases
+
   
 build:
   stage: build
@@ -75,8 +82,6 @@ dockerize_master:
       dotenv: build.env
 
 
-
-
 deploy:
   stage: deploy
   image: alpine
@@ -90,8 +95,6 @@ deploy:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
   script:
-    
-    
     - echo image name = ${DOCKER_ORGANIZATION_NAME}/${DOCKER_IMAGE_NAME}
     - echo container name = ${DOCKER_IMAGE_NAME}
     - ssh -o StrictHostKeyChecking=no root@46.227.254.20 'bash -s' <  deploy_instructions.sh ${DOCKER_ORGANIZATION_NAME} ${DOCKER_IMAGE_NAME} ${DOCKER_IMAGE_AND_TAG} ${CONTAINER_PORT}
