--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
   DOCKER_ORGANIZATION_NAME: "iread"
   DOCKER_IMAGE_NAME: "api_gateway_ms"
   CONTAINER_PORT: "5014"
+  HTTPS_INTERNAL_PORT: "5020"
 
 
 workflow:
@@ -97,4 +98,4 @@ deploy:
   script:
     - echo image name = ${DOCKER_ORGANIZATION_NAME}/${DOCKER_IMAGE_NAME}
     - echo container name = ${DOCKER_IMAGE_NAME}
-    - ssh -o StrictHostKeyChecking=no root@46.227.254.20 'bash -s' <  deploy_instructions.sh ${DOCKER_ORGANIZATION_NAME} ${DOCKER_IMAGE_NAME} ${DOCKER_IMAGE_AND_TAG} ${CONTAINER_PORT}
+    - ssh -o StrictHostKeyChecking=no root@46.227.254.20 'bash -s' <  deploy_instructions.sh ${DOCKER_ORGANIZATION_NAME} ${DOCKER_IMAGE_NAME} ${DOCKER_IMAGE_AND_TAG} ${CONTAINER_PORT} ${HTTPS_CONTAINER_PORT}
