--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "localhost.pfx",
+        "Password": "iread"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
