add ip of server in certificate as enabled dns

--- a/cert/localhost.conf
+++ b/cert/localhost.conf
@@ -21,5 +21,6 @@ keyUsage = keyCertSign, cRLSign, digitalSignature,keyEncipherment
 [alt_names]
 DNS.1   = localhost
 DNS.2   = 127.0.0.1
+DNS.3   = 46.227.254.20
 DNS.3   = api_gateway_ms
 
