--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "Kestrel": {
     "Certificates": {
       "Default": {
-        "Path": "localhost.pfx",
+        "Path": "cert/localhost.pfx",
         "Password": "iread"
       }
     }
