--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -29,7 +29,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5020;http://localhost:5014",
+      "applicationUrl": "https://192.168.1.118:5020;http://192.168.1.118:5014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
